Changes from jTDS 0.6
========================

02/17/2004 - Alin Sinpalean
 o Seems like yesterday I didn't commit part of the files. So here they are.
 o Fixed the ArrayIndexOutOfBoundsException thrown by TdsConnection.freeTds
   bug.
 o Updated the README and added a features.html file containing the feature
   matrix of jTDS.

02/17/2004 - Brian Heineman
 o Reduced memory allocated for Callable and Prepared statements by removing
   unused instance variable created for each SQL parameter.

02/16/2004 - Alin Sinpalean
 o Implemented updateRow and insertRow in CursorResultSet. Updateable
   ResultSets are now fully supported.
 o Updated DatabaseMetaData to reflect the newly added functionality.
 o Optimized the methods wrapping the sp_cursor calls.
 o Fixed an issue in TdsStatement where exceptions would get lost when the next
   result was a ResultSet or there were no more results (the warning chain was
   only checked in getMoreResults if the next result was an update count).
 o Small optimization in AbstractResultSet.
 o Added a simple test for inserting a row in a ResultSet.

02/15/2004 - Brian Heineman
 o Corrected bug in CallableStatement parsing where [ and " would cause the
   procedure name to be parsed incorrectly.

02/13/2004 - Brian Heineman
 o Minor cleanup of CallableStatement and refactoring of PreparedStatement
   procedure logic.
 o Removed extraneous UniqueId class, the logic is now handled in Procedure.
 o Improved performance of CallableStatement and PreparedStatement ~14% by
   reducing the number of times SQL is parsed.  Degraded performance of
   plain statements using escape processing and the Connection.nativeSQL call
   by ~6%; for now, the consolidation of parsing logic outweighs the minor
   degradation.

02/12/2004 - Alin Sinpalean
 o Fixed a nasty regression introduced by the new DECIMAL/NUMERIC code (null
   BigDecimals would cause an invalid packet, with scale -1).